--- a/index.html
+++ b/index.html
@@ -4,9 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Display Inline</title>
 </head>
 <body>
-    
+    <main>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda deleniti sunt optio ea quidem at repellendus, quos nobis quis neque praesentium culpa labore inventore voluptates? Nostrum autem animi natus veritatis!
+        </div>
+        <div>
+           Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt quis eius, ipsum fugiat eum explicabo consequuntur quae inventore sed, quas vitae minima commodi nostrum quod dolor omnis voluptatem. Odio, esse?
+        </div>
+        <div>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, ex deleniti? Incidunt vel atque facere iure est tenetur officia corporis aperiam quidem, minima accusamus explicabo, odit assumenda debitis tempora vero.
+        </div>
+    </main>
 </body>
 </html>
